@@ -57,6 +57,7 @@ delete_newline_on_delete_to_eol false
 # beginning (true).
 found_cursor_start false
 find.return_on_abort false
+find.show_context_after true
 grep.context 0
 
 max_clips 30
